<resources>
    <string name="app_name">SMS Scheduler</string>
    <string name="action_login">Login/Logout</string>
    <string name="logo">Logo</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_add_delayed_sms">Add delayed sms</string>
    <string name="phone_number">Phone Number</string>
    <string name="sms_text">Message</string>
    <string name="date">Set Date</string>
    <string name="time">Set Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_message_phone">Phone number must have 10 digits</string>
    <string name="dialog_title">Invalid input</string>
    <string name="ok">Ok</string>
    <string name="dialog_message_message">The message must contain letters</string>
    <string name="dialog_message_date">Please choose a date</string>
    <string name="dialog_message_time">Please choose a time</string>
    <string name="dialog_message_too_early">Date and Time must be later than now</string>
    <string name="sent_messages_list">Sent Messages List</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_email">Sign in with email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sms">Send SMS</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="action_sign_in_facebook">Sign in with Facebook</string>
    <string name="choose_from_contacts">Contacts</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up">Sign up</string>
    <string name="action_sign_up">Sign up</string>
    <string name="title_activity_main">Schedule SMS</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="app_intro"><u>App Intro</u></string>
    <string name="intro_activity">IntroActivity</string>
</resources>
