<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hackeru.talg.edu.androidproject.MainActivity">

    <item
        android:id="@+id/action_sms"
        android:orderInCategory="100"
        android:title="@string/action_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="Logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_up"
        android:orderInCategory="100"
        android:title="@string/sign_up"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_intro"
        android:orderInCategory="100"
        android:title="App Intro"
        app:showAsAction="never" />
</menu>
